@@ -74,6 +74,7 @@ enum PROCESSOR_TYPE
   _P16C72_,
   _P16C73_,
   _P16C74_,
+  _P16F871_,
   _P16F873_,
   _P16F874_,
   _P16F877_,
