@@ -1,3 +1,11 @@
+2004-03-14  Bert Driehuis <driehuis@playbeing.org>
+	* extras/lcd/lcdengine.cc, extras/lcd/lcd.h, extras/lcd/examples/lcd.asm:
+	Fixed the LCD modules "E" logic. 
+
+2004-03-13 Robert Pearce
+	* src/16f87x.cc, src/16f87x.h, src/pic-processor.cc, src/pic-processor.h:
+	Added 16f871.
+
 2004-03-09 Scott Dattalo  <scott@dattalo.com>
 	* src/16bit-instructions.cc, src/trace.cc:
 	Addresses displayed for the 18F devices are now displayed properly.
